--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "axios": "^1.3.3",
     "bulma": "^0.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
