--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
-    "axios": "^1.3.3",
+    "axios": "^1.4.0",
     "bulma": "^0.9.4",
+    "jsonwebtoken": "^9.0.1",
+    "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-icons": "^1.10.2",
