--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
     "react-switch": "^7.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
